tests/negative/neg_string_initializer_type.safe
-- Test: neg_string_initializer_type
-- Description: Constant String declarations still require String-compatible initializers.
-- Expected: REJECT source_frontend_error

package neg_string_initializer_type

   name : constant string = 1;


